<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#0f4a00"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_bun"
        android:contentDescription="@string/description_logo"/>
    
    <Button
    	android:id="@+id/multiplayer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/multiplayer"
        android:background="@drawable/general_button"
        style="@style/GeneralButton" />

    <Button
        android:id="@+id/one_player"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/one_player"
        android:background="@drawable/general_button"
        style="@style/GeneralButton" />

    <Button
        android:id="@+id/restore_game"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/restore_game"
        android:background="@drawable/general_button"
        style="@style/GeneralButton" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/prefs"
        android:background="@drawable/general_button"
        style="@style/GeneralButton" />

    <Button
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/dialog_help"
        android:background="@drawable/general_button"
        style="@style/GeneralButton" />

</LinearLayout>